--- a/app/src/main/res/layout/activity_base_fragment.xml
+++ b/app/src/main/res/layout/activity_base_fragment.xml
@@ -4,14 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.zhengmin.mixstack.activity.MainActivity">
+    tools:context="com.example.zhengmin.mixstack.activity.BaseFragmentActivity">
+    <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
 
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="46dp" />
 </android.support.constraint.ConstraintLayout>
