--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.zhengmin.mixstack.fragment.BlankFragment">
+    tools:context="com.example.zhengmin.mixstack.fragment.BlankFragmentA">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -10,5 +10,5 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button fragment1" />
+        android:text="Button fragment A" />
 </FrameLayout>
