--- a/app/src/main/res/layout/fragment_blank_fragment_c.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment_c.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.BlankFragmentB">
+    tools:context=".fragment.BlankFragmentC">
 
     <!-- TODO: Update blank fragment layout -->
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="fragmentB" />
+        android:text="fragmentC" />
 
 </FrameLayout>
