--- a/PageNavigation/src/main/res/layout/activity_base_fragment.xml
+++ b/PageNavigation/src/main/res/layout/activity_base_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.zhengmin.mixstack.com.syswin.msgseal.mixstack.BaseFragmentActivity">
+    tools:context="com.syswin.msgseal.navigation.BaseFragmentActivity">
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
