--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -3,15 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:text="Activity1"
+        android:text="Activity3"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"/>
+        android:text="goto Activity1"/>
 </FrameLayout>
